--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -7,7 +7,7 @@
 
 <script id="section-template" type="text/html">
     <h2 id="<%= htmlId %>" class="fixlink"><a href="<%= link %>"><%= title %> </a>
-        <button class="btn btn-default text-right pull-right edit">Edit</button>
+        <button class="btn btn-default text-right pull-right edit">CLICK ME</button>
     </h2>
 
     <p><%= body %></p>
@@ -16,8 +16,8 @@
 
 <script id="section-edit-template" type="text/html">
     <h2 id="<%= htmlId %>"><a href="<%= link %>"><%= title %></a>
-        <button class="btn btn-success text-right pull-right save">Save</button>
+        <button class="btn btn-success text-right pull-right save">NOW CLICK ME</button>
     </h2>
 
-    <textarea name="body" class="form-control" rows="3"><%= body %></textarea>
+    <textarea name="body" class="form-control" rows="10"><%= body %></textarea>
 </script>
