--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -7,12 +7,43 @@
 
 <script id="section-template" type="text/html">
     <h2 id="<%= htmlId %>" class="fixlink"><a href="<%= link %>"><%= title %> </a>
-        <button class="btn btn-default text-right pull-right edit">CLICK ME</button>
     </h2>
 
-    <p><%= body %></p>
+    <p>
+        <form id="<%= formId >" name="<%= formId >" method="post" action="">
+            Credits
+            <select id="<%= creditDrop >" name="<%= creditDrop " >
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <br>
+
+            Grades
+        <select id="<%= gradeDrop >" name="<%= gradeDrop >">
+            <option value="A">A</option>
+            <option value="A-">A-</option>
+            <option value="B+">B+</option>
+            <option value="B">B</option>
+            <option value="B-">B-</option>
+            <option value="C+">C+</option>
+            <option value="C">C</option>
+            <option value="C-">C-</option>
+            <option value="D+">D+</option>
+            <option value="D">D</option>
+            <option value="D-">D-</option>
+            <option value="F">F</option>
+        </select>
+        </form>
+    </p>
+
+
 
 </script>
+
+<p> HERE </p>
 
 <script id="section-edit-template" type="text/html">
     <h2 id="<%= htmlId %>"><a href="<%= link %>"><%= title %></a>
