--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -9,6 +9,8 @@
     <h2 id="<%= htmlId %>" class="fixlink"><a href="<%= link %>"><%= title %> </a>
     </h2>
 
+    <p>Credits: <%= creditField%> Grade: <%= gradeField%></p>
+
     <p>
         <form id="<%= formId >" name="<%= formId >" method="post" action="">
             Credits
@@ -42,8 +44,17 @@
 
 
 </script>
+<script id="section-template2" type="text/html">
+<div>
+<form>
+    <input type="submit" id="submit" value="submit" class="btn btn-success text-right pull-right save">
+</form>
 
-<p> HERE </p>
+
+
+<p><%= creditDrop%></p>
+</div>
+</script>
 
 <script id="section-edit-template" type="text/html">
     <h2 id="<%= htmlId %>"><a href="<%= link %>"><%= title %></a>
