--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -24,7 +24,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Testing<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#mocha">Mocha</a></li>
+                        <li><a href="#mochaORIGINAL">Mocha</a></li>
                         <li><a href="#istanbul">Istanbul</a></li>
                     </ul>
                 </li>
